# kiki

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  all_gget.md  blog.md  client.py  difference.md  macbook_sillicon_setup.sh  note1.md  notebook.md  pyproject.toml  server.py
.cursor/rules/: kiki-core.mdc  kiki-mcp-tools.mdc  kiki-services.mdc  kiki-tests.mdc
docs/: database_retrieval.md
kiki/: __init__.py  __main__.py  cli.py  config.py  errors.py  server.py
kiki/audit/: __init__.py  deferred_filters.py  gget_provenance.py  history.py  log.py  paths.py
kiki/benchmark/: README.md  __init__.py  __main__.py  load.py  report.py  runner.py
kiki/models/: __init__.py  manifest.py  responses.py
kiki/query/: __init__.py  blast.py  ena.py  ensembl.py  genome.py  normalize.py  presets.py  uniprot.py  uniprot_presets.py  validate.py
kiki/services/: __init__.py  command_summary.py  ena.py  ensembl.py  filters.py  gget_ensembl.py  gget_virus.py  ncbi.py  ncbi_blast.py  ncbi_eutils.py  output_paths.py  pagination.py  uniprot.py
kiki/tools/: __init__.py  _errors.py  _params.py  _response.py  count.py  dataset.py  history.py  (+1 more)
kiki_audit/: manifest_history.jsonl
tests/: test_audit.py  test_blast_query.py  test_blast_tools.py  test_contract.py  test_dataset_guards.py  test_ena_query.py  test_ena_service.py  test_ena_tools.py  test_ensembl_query.py  test_ensembl_tools.py  test_filters.py  test_genome_tools.py  test_metadata.py  test_pagination.py  test_reproducibility.py  test_uniprot_query.py  test_uniprot_tools.py  test_virbench_subset.py  test_writable_paths.py
(+22 files in other folders)
