[project]
name = "kiki"
version = "0.1.0"
description = "MCP infrastructure for deterministic biological sequence data retrieval"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Hoang Dang" }]
dependencies = [
    "fastmcp>=3.4.2",
    "gget>=0.30.7",
    "requests>=2.34.2",
]

[project.scripts]
kiki = "kiki.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kiki"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
